# homemade-jpeg

./: .gitignore  CMakeLists.txt  README.md
src/: dct.cpp  dct.h  debug.cpp  debug.h  io.cpp  io.h  main.cpp  quantization.cpp  quantization.h  utils.cpp  utils.h  yuv.cpp  yuv.h
